--- a/markdown/20200522.1.md
+++ b/markdown/20200522.1.md
@@ -4,9 +4,10 @@ Date: 2018-09-10 14:30
 Category: Misc
 Tags: wcmj 2020 w6
 Slug: 2020-MAY-w6 Windows
-
-Author: yen
+Author: wung
 ---
+
+<!-- PELICAN_END_SUMMARY -->
 
 step 1
 登入 gm 帳號後, 下載 https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH 至 downloads 目錄, 然後以 7zip 解開到 C:\wcmj2020 目錄下
@@ -43,6 +44,3 @@ git commit -m "commit message"
 git push
 
 輸入帳號密碼???
-
-
-<!-- PELICAN_END_SUMMARY -->
