--- a/markdown/20200522.2.md
+++ b/markdown/20200522.2.md
@@ -4,9 +4,10 @@ Date: 2018-09-10 14:30
 Category: Misc
 Tags: wcmj 2020 w1-2
 Slug: 2020-MAY-w1-2 Windows
-
-Author: yen
+Author: wung
 ---
+
+<!-- PELICAN_END_SUMMARY -->
 
 建立一個bloger https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar
 
@@ -23,3 +24,8 @@ Port 戶號
 Nat 
 DHCP動態網路位置
 
+利用手機鏡頭當作 webcam:
+
+Android: https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows
+ 
+iPhone: https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/ 
